# .history/review_service/internal/data/model/review_info.gen_20241211234132.go
@@ -1,56 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package model
-
-import (
-	"time"
-)
-
-const TableNameReviewInfo = "review_info"
-
-// ReviewInfo mapped from table <review_info>
-type ReviewInfo struct {
-	ID           int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	CreateBy     string    `gorm:"column:create_by;not null" json:"create_by"`
-	UpdateBy     string    `gorm:"column:update_by;not null" json:"update_by"`
-	CreateAt     time.Time `gorm:"column:create_at;not null;default:CURRENT_TIMESTAMP" json:"create_at"`
-	UpdateAt     time.Time `gorm:"column:update_at;not null;default:CURRENT_TIMESTAMP" json:"update_at"`
-	DeleteAt     time.Time `gorm:"column:delete_at;comment:nullable" json:"delete_at"` // nullable
-	Version      int32     `gorm:"column:version;not null" json:"version"`
-	ReviewID     int64     `gorm:"column:review_id;not null;comment:id" json:"review_id"` // id
-	Content      string    `gorm:"column:content;not null" json:"content"`
-	Score        int32     `gorm:"column:score;not null" json:"score"`
-	ServiceScore int32     `gorm:"column:service_score;not null" json:"service_score"`
-	ExpressScore int32     `gorm:"column:express_score;not null" json:"express_score"`
-	HasMedia     int32     `gorm:"column:has_media;not null" json:"has_media"`
-	OrderID      int64     `gorm:"column:order_id;not null;comment:id" json:"order_id"` // id
-	SkuID        int64     `gorm:"column:sku_id;not null;comment:sku id" json:"sku_id"` // sku id
-	SpuID        int64     `gorm:"column:spu_id;not null;comment:spu id" json:"spu_id"` // spu id
-	StoreID      int64     `gorm:"column:store_id;not null;comment:id" json:"store_id"` // id
-	UserID       int64     `gorm:"column:user_id;not null;comment:id" json:"user_id"`   // id
-	Anonymous    int32     `gorm:"column:anonymous;not null" json:"anonymous"`
-	Tags         string    `gorm:"column:tags;not null;comment:json" json:"tags"` // json
-	PicInfo      string    `gorm:"column:pic_info;not null" json:"pic_info"`
-	VideoInfo    string    `gorm:"column:video_info;not null" json:"video_info"`
-	/*
-		:102030
-
-		40
-	*/
-	Status         int32  `gorm:"column:status;not null;default:10;comment::102030\n\n40" json:"status"`
-	IsDefault      int32  `gorm:"column:is_default;not null" json:"is_default"`
-	HasReply       int32  `gorm:"column:has_reply;not null;comment::0;1" json:"has_reply"` // :0;1
-	OpReason       string `gorm:"column:op_reason;not null" json:"op_reason"`
-	OpRemarks      string `gorm:"column:op_remarks;not null" json:"op_remarks"`
-	OpUser         string `gorm:"column:op_user;not null" json:"op_user"`
-	GoodsSnapshoot string `gorm:"column:goods_snapshoot;not null" json:"goods_snapshoot"`
-	ExtJSON        string `gorm:"column:ext_json;not null" json:"ext_json"`
-	CtrlJSON       string `gorm:"column:ctrl_json;not null" json:"ctrl_json"`
-}
-
-// TableName ReviewInfo's table name
-func (*ReviewInfo) TableName() string {
-	return TableNameReviewInfo
-}
